attack of the clones take 3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
        <img src="img/logo.png" alt="site logo" />
        <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
        <img src="img/book-icon.png" alt="book icon" />
+       <a href="sign-in.html">
+        <button>Sign In</button>
+       </a>
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browse-library.html">Browse Library</a></li>
