added sign in added CSS folder path reference and hero image, added text content.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Second Chance Books</title>
-  <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <script src="js/app.js"></script>
 </head>
 
@@ -15,6 +15,9 @@
     <img src="logo.png" alt="site logo" />
     <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
     <img src="book-icon.png" alt="book icon" />
+    <a href="sign-in.html">
+      <button>Sign In</button>
+    </a>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="browse-library.html">Browse Library</a></li>
@@ -29,7 +32,8 @@
       If you share a book you're done reading recieve one book credit. Redeem one book credit for one bookshelf item.
     </p>
     <img src="books-on-a-shelf.png" alt="Books displayed on a shelf" title="Books On A Shelf" />
-    <p>Our mission is to give books the love and appreciation they deserve by providing them a second chance to create inspiration.</p>
+    <p>Our mission is to give books the love and appreciation they deserve by providing them a second chance to create
+      inspiration.</p>
   </main>
 
 
