added new updates to basic txt file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/app.js"></script>
+  <script src ="js/user.js"></script>
+
 </head>
 
 <body>
@@ -63,8 +65,8 @@ homepage-welcome-hero
     <footer>
         &copy; Copyright
         <p>Phone Number: 319-945-1628</p>
-        <p>Email: secondhand@books.com</p>
-        <p> Address: 124 Book rd Cedar Rapids, IA, 52402
+        <p>Email: secondchance@books.com</p>
+        <p> Address: 124 Book rd Cedar Rapids, IA, 52402 </p>
           <ul>
           <li><a href="index.html">Volunteer</a></li>
           </ul>
