added closing body tags to html files

--- a/sign-in.html
+++ b/sign-in.html
@@ -12,10 +12,10 @@
   <body>
     <header>
       <h1>Second Hand Books</h1>
-       <img src="logo.png" alt="site logo" />
-       <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="book-icon.png" alt="book icon" />
-       <a href="sign-in.html">
+       <img src="img/logo.png" alt="site logo" />
+       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <img src="img/book-icon.png" alt="book icon" />
+       <a href="img/sign-in.html">
       <button>Sign In</button>
        </a>
        <ul>
@@ -47,3 +47,4 @@
     <li><a href="index.html">Volunteer</a></li>
     </ul>
  </footer>
+ </body>
