--- a/sign-in.html
+++ b/sign-in.html
@@ -12,12 +12,10 @@
   <body>
     <header>
       <h1>Second Hand Books</h1>
-       <img src="logo.png" alt="site logo" />
-       <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="book-icon.png" alt="book icon" />
-       <a href="sign-in.html">
-      <button>Sign In</button>
-       </a>
+       <img src="img/logo.png" alt="site logo" />
+       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <img src="img/book-icon.png" alt="book icon" />
+       <a href="sign-in.html"> Sign in</a>
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browselibrary.html">Browse Library</a></li>
