--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@ homepage-welcome-hero
         &copy; Copyright
         <p>Phone Number: 319-945-1628</p>
         <p>Email: secondhand@books.com</p>
-        <p> Address: 124 Book rd Cedar Rapids, IA, 52402
+        <p> Address: 124 Book rd Cedar Rapids, IA, 52402</p>
           <ul>
           <li><a href="index.html">Volunteer</a></li>
           </ul>
        </footer>
      </body>
+     </html>
       
 
 
