--- a/sign-in.html
+++ b/sign-in.html
@@ -4,20 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Second Chance Books</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/user.js"></script>
     <script src="js/sign-in.js"></script>
   </head>
   <body>
     <header>
-      <h1>Second Hand Books</h1>
+      <h1>Second Chance Books</h1>
        <img src="logo.png" alt="site logo" />
        <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
        <img src="book-icon.png" alt="book icon" />
-       <a href="sign-in.html">
-      <button>Sign In</button>
-       </a>
+       <a href="sign-in.html" >Sign In </a>
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browse-library.html">Browse Library</a></li>
@@ -41,8 +39,8 @@
 <footer>
   &copy; Copyright
   <p>Phone Number: 319-945-1628</p>
-  <p>Email: secondhand@books.com</p>
-  <p> Address: 124 Book rd Cedar Rapids, IA, 52402
+  <p>Email: secondchance@books.com</p>
+  <p> Address: 124 Book Rd Cedar Rapids, IA, 52402
     <ul>
     <li><a href="index.html">Volunteer</a></li>
     </ul>
