Add minor changes

--- a/share-book.html
+++ b/share-book.html
@@ -31,7 +31,7 @@
   <p>Email: secondchance@books.com</p>
   <p> Address: 124 Book Rd Cedar Rapids, IA, 52402 </p>
     <ul>
-    <li><a href="index.html">Volunteer</a></li>
+    <li><a href="index.html#volunteer">Volunteer</a></li>
     </ul>
  </footer>
 </body>
