--- a/sign-in.html
+++ b/sign-in.html
@@ -12,9 +12,9 @@
   <body>
     <header>
       <h1>Second Chance Books</h1>
-       <img src="logo.png" alt="site logo" />
-       <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="book-icon.png" alt="book icon" />
+       <img src="img/" alt="site logo" />
+       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <img src="img/book-icon.png" alt="book icon" />
        <a href="sign-in.html" >Sign In </a>
        <ul>
         <li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
   <p>Email: secondchance@books.com</p>
   <p> Address: 124 Book Rd Cedar Rapids, IA, 52402 </p>
     <ul>
-    <li><a href="index.html">Volunteer</a></li>
+    <li><a href="index.html#volunteer">Volunteer</a></li>
     </ul>
  </footer>
  </body>
