--- a/about-us.html
+++ b/about-us.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-        <h1>Second Hand Books</h1>
-       <img src="logo.png" alt="site logo" />
-       <img src="bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="book-icon.png" alt="book icon" />
+        <h1>Second Chance Books</h1>
+       <img src="img/logo.png" alt="site logo" />
+       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <img src="img/book-icon.png" alt="book icon" />
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browselibrary.html">Browse Library</a></li>
@@ -60,10 +60,10 @@
 <footer>
   &copy; Copyright
   <p>Phone Number: 319-945-1628</p>
-  <p>Email: secondhand@books.com</p>
-  <p> Address: 124 Book rd Cedar Rapids, IA, 52402
+  <p>Email: secondchance@books.com</p>
+  <p> Address: 124 Book Rd Cedar Rapids, IA, 52402</p>
     <ul>
-    <li><a href="index.html">Volunteer</a></li>
+    <li><a href="index.html#volunteer">Volunteer</a></li>
     </ul>
  </footer>
 </body>
