--- a/js/browse-library.html
+++ b/js/browse-library.html
@@ -38,7 +38,7 @@
   &copy; Copyright
   <p>Phone Number: 319-945-1628</p>
   <p>Email: secondchance@books.com</p>
-  <p> Address: 124 Book rd Cedar Rapids, IA, 52402
+  <p> Address: 124 Book Rd Cedar Rapids, IA, 52402</p>
     <ul>
     <li><a href="/index.html#volunteer">Volunteer</a></li>
     </ul>
