--- a/about-us.html
+++ b/about-us.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Second Chance Books</title>
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="js/app.js"></script>
+    <script src = "user.js"></script>
+    
+
   </head>
   <body>
     <header>
@@ -15,9 +18,9 @@
        <img src="img/book-icon.png" alt="book icon" />
        <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="browselibrary.html">Browse Library</a></li>
-        <li><a href="sharebook.html">Share a Book</a></li>
-        <li><a href="aboutus.html">About</a></li>
+        <li><a href="browse-library.html">Browse Library</a></li>
+        <li><a href="share-book.html">Share a Book</a></li>
+        <li><a href="about-us.html">About</a></li>
        </ul>
     </header>
     <main>
