--- a/browse-library.html
+++ b/browse-library.html
@@ -16,6 +16,7 @@
        <img src="img/logo.png" alt="site logo" />
        <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
        <img src="img/book-icon.png" alt="book icon" />
+       <a href="sign-in.html"> Sign in </a>
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browse-library.html">Browse Library</a></li>
