Add user bugfix in browse.js

--- a/browse-library.html
+++ b/browse-library.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/app.js"></script>
     <script src="js/book.js"></script>
+    <script src="js/user.js"></script>
     <script src="js/browse.js"></script>
   </head>
   <body onload="initializeBrowse()">
