Add search button

--- a/browse-library.html
+++ b/browse-library.html
@@ -33,6 +33,7 @@
           Add a book to your bookshelf by clicking Add to Shelf
         </p>
         <input type="text" id="searchBar" placeholder="Search by title, author, attributes">
+        <button id="buttonSearch" onclick="searchBooks()">Search</button>
       </section>
       <div id="libraryCards"></div>
     </main>
