added annimation, added id to index html logo and sign-in.

--- a/sign-in.html
+++ b/sign-in.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>Second Chance Books</h1>
-       <img src="img/" alt="site logo" />
+       <img src="img/logo.png" id="siteLogo" alt="site logo" />
        <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
        <img src="img/book-icon.png" alt="book icon" />
        <a href="sign-in.html" >Sign In </a>
