--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header>
     <h1>Second Chance Books</h1>
-    <img src="img/logo.png" alt="site logo" />
+    <img src="img/logo.png" id="siteLogo" alt="site logo" />
     <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
     <img src="img/book-icon.png" alt="book icon" />
-    <a href="sign-in.html"> Sign in </a>
+    <a href="sign-in.html" id="sign-in"> Sign in </a>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="browse-library.html">Browse Library</a></li>
@@ -42,7 +42,7 @@
       </div>
       <section>
        
-        <p> Address: 124 Book rd Cedar Rapids, IA, 52402 </p>
+        <p> Address: 124 Book Rd Cedar Rapids, IA, 52402 </p>
         
           <h3> Store Hours</h3>
           <ul>
