--- a/share-book.html
+++ b/share-book.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/app.js"></script>
     <script src ="js/user.js"> </script>
+    <script src = "js/share-book.js"></script>
+    <script src ="js/browse.js"></script>
   </head>
   <body>
     <header>
         <h1>Second Chance Books</h1>
        <img src="img/logo.png" alt="site logo" />
        <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="img/book-icon.png" alt="book icon" />
+       <img src="img/book-icon.png" alt="book icon" id="tokenCount"/>
        <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="browse-library.html">Browse Library</a></li>
         <li><a href="share-book.html">Share a Book</a></li>
         <li><a href="about-us.html">About</a></li>
+   
        </ul> 
      </header>
     <main>
@@ -34,7 +37,7 @@
 
         <input type = "text" id ="author" placeholder = "name" required>
         
-        <button type="button">Submit</button>
+        <button type="button" onclick="handleSubmit()"> Submit </button>
       </form>
 
         </main>    
