--- a/share-book.html
+++ b/share-book.html
@@ -6,10 +6,11 @@
     <title>Second Chance Books</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/app.js"></script>
     <script src ="js/user.js"> </script>
-    <script src = "js/share-book.js"></script>
+    <script src = "js/book.js"></script>
     <script src ="js/browse.js"></script>
+    <script src = "js/share-book.js"></script>
+   
   </head>
   <body>
     <header>
@@ -28,18 +29,19 @@
     <main>
       <p> Add a book down below and receive a token. You can then exchange a token for a book in checkout</p>
       <img src ="img/book-icon.png" alt=" book token"/> <!--enlarged book token image tha will be to the left of icon-->
-      <form>
-        <label for = "title"> Title</label> <br>
+      <fieldset>
+        <legend>Add a Book</legend>
+        <label for = "booktitle"> Title</label> <br>
 
-        <input type = "text" id = "title" placeholder="title" required >
+        <input type = "text" id="booktitle" placeholder="booktitle" required ><br>
 
         <label for = "author"> Author</label> <br>
 
-        <input type = "text" id ="author" placeholder = "name" required>
+        <input type = "text" id="author" placeholder = "name" required><br>
         
         <button type="button" onclick="handleSubmit()"> Submit </button>
-      </form>
-
+      
+        </fieldset>
         </main>    
 
 <footer>
