--- a/browse-library.html
+++ b/browse-library.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <title>Second Chance Books</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/app.js"></script>
-    <script src="js/book.js"></script>
-    <script src="js/user.js"></script>
-    <script src="js/browse.js"></script>
-  </head>
-  <body onload="initializeBrowse()">
-    <header>
-        <h1>Second Chance Books</h1>
-       <img src="img/logo.png" alt="site logo" />
-       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
-       <img src="img/book-icon.png" alt="book icon" />
-       <a href="sign-in.html"> Sign in </a>
-       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="browse-library.html">Browse Library</a></li>
-        <li><a href="share-book.html">Share a Book</a></li>
-        <li><a href="about-us.html">About</a></li>
-       </ul>
-    </header>
-    <main>
-      <section id="searchBarSection">
-        <h2>Browse the Library</h2>
-        <p>
-          Explore our library or use the search bar to find a book.<br>
-          Add a book to your bookshelf by clicking Add to Shelf
-        </p>
-        <input type="text" id="searchBar" placeholder="Search by title, author, attributes">
-        <button id="buttonSearch" onclick="searchBooks()">Search</button>
-      </section>
-      <div id="libraryCards"></div>
-    </main>
-<footer>
-  &copy; Copyright
-  <p>Phone Number: 319-945-1628</p>
-  <p>Email: secondchance@books.com</p>
-  <p> Address: 124 Book Rd Cedar Rapids, IA, 52402</p>
+<head>
+  <meta charset="UTF-8" />
+  <title>Second Chance Books</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/app.js"></script>
+  <script src="js/book.js"></script>
+  <script src="js/user.js"></script>
+  <script src="js/browse.js"></script>
+</head>
+
+<body onload="initializeBrowse()">
+  <header>
+    <h1>Second Chance Books</h1>
+    <img src="img/logo.png" id="siteLogo" alt="site logo" />
+    <img src="img/bookshelf-icon.jpg" id="bookshelf" alt="bookshelf icon" />
+    <img src="img/book-icon.png" id="book-icon" alt="book icon" />
+    <span id="logInArea"><a href="sign-in.html" id="sign-in"> Sign in </a></span>
     <ul>
-    <li><a href="/index.html#volunteer">Volunteer</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="browse-library.html">Browse Library</a></li>
+      <li><a href="share-book.html">Share a Book</a></li>
+      <li><a href="about-us.html">About</a></li>
     </ul>
- </footer>
+  </header>
+  <main>
+    <section id="searchBarSection">
+      <h2>Browse the Library</h2>
+      <p>
+        Explore our library or use the search bar to find a book.<br>
+        Add a book to your bookshelf by clicking Add to Shelf
+      </p>
+      <input type="text" id="searchBar" placeholder="Search by title, author, attributes">
+      <button id="buttonSearch" onclick="searchBooks()">Search</button>
+    </section>
+    <div id="libraryCards"></div>
+  </main>
+  <footer>
+    &copy; Copyright
+    <p>Phone Number: 319-945-1628</p>
+    <p>Email: secondchance@books.com</p>
+    <p> Address: 124 Book Rd Cedar Rapids, IA, 52402</p>
+    <ul>
+      <li><a href="/index.html#volunteer">Volunteer</a></li>
+    </ul>
+  </footer>
 </body>
-  
