finished the checkout page

--- a/browse-library.html
+++ b/browse-library.html
@@ -15,7 +15,7 @@
     <header>
         <h1>Second Chance Books</h1>
        <img src="img/logo.png" alt="site logo" />
-       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
        <img src="img/book-icon.png" alt="book icon" />
        <a href="sign-in.html"> Sign in </a>
        <ul>
