--- a/about-us.html
+++ b/about-us.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Second Chance Books</h1>
        <img src="img/logo.png" alt="site logo" />
-       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
        <img src="img/book-icon.png" alt="book icon" />
        <ul>
         <li><a href="index.html">Home</a></li>
