--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>Second Chance Books</h1>
     <img src="img/logo.png" alt="site logo" />
-    <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+    <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
     <img src="img/book-icon.png" alt="book icon" />
     <span id="logInArea"><a href="sign-in.html"> Sign in </a></span>
     <ul>
