--- a/share-book.html
+++ b/share-book.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Second Chance Books</h1>
        <img src="img/logo.png" alt="site logo" />
-       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
        <img src="img/book-icon.png" alt="book icon" id="tokenCount"/>
        <ul>
         <li><a href="index.html">Home</a></li>
