--- a/sign-in.html
+++ b/sign-in.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Second Chance Books</h1>
        <img src="img/" alt="site logo" />
-       <img src="img/bookshelf-icon.jpg" alt="bookshelf icon" />
+       <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
        <img src="img/book-icon.png" alt="book icon" />
        <a href="sign-in.html" >Sign In </a>
        <ul>
