added bio info.

--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
       <section id="allie">
         <p>
           Allie <br>
-          Allie graduated from Mount Mercy University in 2022. She has here Bachelors of Science degree with her major in psychology and her minors in Criminal Justice and Child Studies. She is now a student at Delta V Code school trying to pursue a career in Software Development 
+          Allie graduated from Mount Mercy University in 2022. She has her Bachelors of Science degree with her major in psychology and her minors in Criminal Justice and Child Studies. She is now a student at Delta V Code school trying to pursue a career in Software Development 
         </p>
         <img src="" alt="picture of allie" />
       </section>
@@ -55,7 +55,7 @@
       <section id="teresa">
         <p>
           Teresa <br>
-          enter bio here
+          I recently returned to the area after living the past seven years in the San Fransico bay area. I retired from Procter & Gamble after 22 years of service. My most recent role with P&G was that of Anaylst I (Technical and Admisistrative), supporting a NorCal regional sales team. Our team broke all sales records for four consecutive years. I'm currently pursuing a Software Development certification through Delta V. My hobbies include walking, biking, and gardening.
         </p>
         <img src="" alt="picture of teresa" />
       </section>
