--- a/checkout.html
+++ b/checkout.html
@@ -6,17 +6,16 @@
   <title>Second Chance Books</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <!-- <script src="js/app.js"></script> -->
   <script src="js/user.js"></script>
-  <script src="js/checkout.js"></script>
 </head>
-<body onload="initilizeCheckout()">
+
+<body onload="checkLoggedIn()">
   <header>
-    <h1>Second Hand Books</h1>
-    <img src="img/logo.png" alt="site logo" />
-    <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
-    <img src="img/book-icon.png" alt="book icon" />
-    <a href="sign-in.html"> Sign in </a>
+    <h1>Second Chance Books</h1>
+    <img id="site logo" src="img/logo.png" alt="site logo" />
+    <a href = "checkout.html"><img id="bookshelf" src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
+    <img id="book-icon" src="img/book-icon.png" alt="book icon" />
+    <span id="logInArea"><a href="sign-in.html"> Sign in </a></span>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="browse-library.html">Browse Library</a></li>
@@ -34,14 +33,17 @@
 <span id="endGreeting"></span>
   </main>
   <footer>
-    &copy; Copyright
-    <p>Phone Number: 319-945-1628</p>
-    <p>Email: secondhand@books.com</p>
-    <p> Address: 124 Book rd Cedar Rapids, IA, 52402
-      <ul>
-      <li><a href="index.html">Volunteer</a></li>
-      </ul>
-   </footer>
- </body>
+    <ul>
+      <li>&copy; 2022 Second Chance Books</li>
+    </ul>
+    <ul>
+      <li>Phone Number: 319-945-1628</li>
+      <li>Email: secondchance@books.com</li>
+      <li>Address: 124 Book Rd Cedar Rapids, IA, 52402</li>
+    </ul>
+    <ul>
+      <li><a href="index.html#volunteer">Volunteer</a></li>
+    </ul>
+  </footer>
+</body>
 </html>
-
