--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body onload="checkLoggedIn()">
   <header>
     <h1>Second Chance Books</h1>
-    <img src="img/logo.png" alt="site logo" />
-    <a href = "checkout.html"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
-    <img src="img/book-icon.png" alt="book icon" />
+    <img id="site logo" src="img/logo.png" alt="site logo" />
+    <a href = "checkout.html"><img id="bookshelf" src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
+    <img id="book-icon" src="img/book-icon.png" alt="book icon" />
     <span id="logInArea"><a href="sign-in.html"> Sign in </a></span>
     <ul>
       <li><a href="index.html">Home</a></li>
