fixed header tags scripts in all html files

--- a/share-book.html
+++ b/share-book.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/user.js"></script>
+  <script src="js/book.js"></script>
+  <script src="js/browse.js"></script>
+  <script src="js/share-book.js"></script>
+  
 </head>
 
 <body onload="checkLoggedIn()">
