--- a/sign-in.html
+++ b/sign-in.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/user.js"></script>
+  <script src="js/sign-in.js"></script>
 </head>
 
 <body onload="checkLoggedIn()">
