--- a/browse-library.html
+++ b/browse-library.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/user.js"></script>
+  <script src="js/book.js"></script>
+  <script src="js/browse.js"></script>
 </head>
 
 <body onload="checkLoggedIn()">
