--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
   <title>Second Chance Books</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <script src="js/checkout.js"></script>
   <script src="js/user.js"></script>
 </head>
 
