fixed some more stuff

--- a/browse-library.html
+++ b/browse-library.html
@@ -11,7 +11,7 @@
   <script src="js/browse.js"></script>
 </head>
 
-<body onload="checkLoggedIn()">
+<body onload="checkLoggedIn();initializeBrowse()">
   <header>
     <h1>Second Chance Books</h1>
     <img id="site logo" src="img/logo.png" alt="site logo" />
