--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
   <script src="js/user.js"></script>
 </head>
 
-<body onload="checkLoggedIn()">
+<body onload="checkLoggedIn();initilizeCheckout()">
   <header>
     <h1>Second Chance Books</h1>
     <img id="site logo" src="img/logo.png" alt="site logo" />
