--- a/browse-library.html
+++ b/browse-library.html
@@ -14,8 +14,8 @@
 <body onload="checkLoggedIn();initializeBrowse()">
   <header>
     <h1>Second Chance Books</h1>
-    <img id="site logo" src="img/logo.png" alt="site logo" />
-    <a href = "checkout.html"><img id="bookshelf" src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
+    <img id="siteLogo" src="img/logo.png" alt="site logo" />
+    <a href = "checkout.html" id="bookshelf"><img src = "img/bookshelf-icon.jpg" alt="bookshelf icon"></a>
     <img id="book-icon" src="img/book-icon.png" alt="book icon" />
     <span id="logInArea"><a href="sign-in.html"> Sign in </a></span>
     <ul>
