added volunteer blurb

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
     </div>
     <h3 id="volunteer">Volunteer Opportunities</h3>
-    <p>We should probably have some text about our volunteer opportunities, but I don't feel like writing it right now.</p>
+    <p>Thank you for your interest in wanting to volunteer. Stop by any of our locations to recieve more information.</p>
   </main>
   <footer>
     <ul>
