Add CSS for browse library page

--- a/browse-library.html
+++ b/browse-library.html
@@ -6,6 +6,7 @@
   <title>Second Chance Books</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/browse.css"/>
   <script src="js/user.js"></script>
   <script src="js/book.js"></script>
   <script src="js/browse.js"></script>
