--- a/about-us.html
+++ b/about-us.html
@@ -26,36 +26,36 @@
   </header>
     <main>
       <h2>About Us</h2>
-      <section id="allie">
-        <p>
+      <section>
+        <p id="allie">
           Allie <br>
           Allie graduated from Mount Mercy University in 2022. She has her Bachelors of Science degree with her major in psychology and her minors in Criminal Justice and Child Studies. She is now a student at Delta V Code school trying to pursue a career in Software Development 
         </p>
         <img id="picOfAllie" src="" alt="picture of allie" />
       </section>
-      <section id="mary">
-        <p>
+      <section>
+        <p id="mary">
           Mary <br>
           enter bio here
         </p>
         <img id="picOfMary" src="" alt="picture of mary" />
       </section>
-      <section id="daniel">
-        <p>
+      <section>
+        <p id="daniel">
           Daniel <br>
           enter bio here
         </p>
         <img id="picOfDaniel" src="" alt="picture of daniel" />
       </section>
-      <section id="jordan">
-        <p>
+      <section>
+        <p  id="jordan">
           Jordan <br>
           enter bio here
         </p>
         <img id="picOfJordan" src="" alt="picture of jordan" />
       </section>
-      <section id="teresa">
-        <p>
+      <section>
+        <p  id="teresa">
           Teresa <br>
           She recently returned to the area after living the past seven years in the San Francisco Bay area. She is retired from Procter & Gamble after 22 years of service. Her most recent role with P&G was that of Analyst I (Technical and Administrative), supporting a NorCal regional sales team. Her team broke all sales records for four consecutive years. She is currently pursuing a Software Development certification through Delta V. My hobbies include walking, biking, and gardening.
           <img id="picOfTeresa" src="" alt="picture of teresa" />
