Start sign--in css

--- a/sign-in.html
+++ b/sign-in.html
@@ -6,6 +6,7 @@
   <title>Second Chance Books</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/sign-in.css">
   <script src="js/user.js"></script>
   <script src="js/sign-in.js"></script>
 </head>
@@ -28,10 +29,10 @@
     <div>
       <label for="name"><b>Name</b></label>
       <input id="name" type="text" placeholder="Name" name="name" required>
-
+      <br>
       <label for="email"><b>Email</b></label>
       <input id="email" type="text" placeholder="email@place.com" name="email" required>
-
+      <br>
       <button id="SignInButton" onclick="handleButton()">Login</button>
     </div>
     <span id="greeting"></span>
