--- a/about-us.html
+++ b/about-us.html
@@ -27,38 +27,38 @@
     <main>
       <h2>About Us</h2>
       <section>
+        <img id="picOfAllie" src="img/allie-pic.jpg" alt="picture of allie" />
         <p id="allie">
           Allie <br>
           Allie graduated from Mount Mercy University in 2022. She has her Bachelors of Science degree with her major in psychology and her minors in Criminal Justice and Child Studies. She is now a student at Delta V Code school trying to pursue a career in Software Development 
         </p>
-        <img id="picOfAllie" src="" alt="picture of allie" />
       </section>
       <section>
+        <img id="picOfMary" src="img/mary-pic.jpg" alt="picture of mary" />
         <p id="mary">
           Mary <br>
           enter bio here
         </p>
-        <img id="picOfMary" src="" alt="picture of mary" />
       </section>
       <section>
-        <p id="daniel">
+        <img id="picOfDaniel" src="img/daniel-pic.jpg" alt="picture of daniel" />
+        <p  id="daniel">
           Daniel <br>
           enter bio here
         </p>
-        <img id="picOfDaniel" src="" alt="picture of daniel" />
       </section>
       <section>
+        <img id="picOfJordan" src="img/jordan-pic.jpg" alt="picture of jordan" />
         <p  id="jordan">
           Jordan <br>
           enter bio here
         </p>
-        <img id="picOfJordan" src="" alt="picture of jordan" />
       </section>
       <section>
-        <p  id="teresa">
+        <img id="picOfTeresa" src="img/teresa-pic.jpg" alt="picture of teresa" />
+        <p id="teresa">
           Teresa <br>
           She recently returned to the area after living the past seven years in the San Francisco Bay area. She is retired from Procter & Gamble after 22 years of service. Her most recent role with P&G was that of Analyst I (Technical and Administrative), supporting a NorCal regional sales team. Her team broke all sales records for four consecutive years. She is currently pursuing a Software Development certification through Delta V. My hobbies include walking, biking, and gardening.
-          <img id="picOfTeresa" src="" alt="picture of teresa" />
         </p>
       </section>
     </main>
