--- a/about-us.html
+++ b/about-us.html
@@ -34,7 +34,7 @@
       <section id="mary">
         <p>
           Mary <br>
-          
+          Mary graduated from Kirkwood in 2020 and has an associates in Allied Health Sciences(medical assisting). She had been working in the healthcare field for the last two years through the pandemic. She has decided to switch careers and is now a student at the Delta V Codeschool in the hopes of breaking in to tech field as a Software Developer.
         </p>
         <img src="" alt="picture of mary" />
       </section>
