--- a/share-book.html
+++ b/share-book.html
@@ -6,6 +6,7 @@
   <title>Second Chance Books</title>
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href = "css/share-book.css"/>
   <script src="js/user.js"></script>
   <script src="js/book.js"></script>
   <script src="js/browse.js"></script>
@@ -29,7 +30,7 @@
   </header>
   <main>
     <p> Add a book down below and receive a token. You can then exchange a token for a book in checkout</p>
-    <img src="img/book-icon.png" alt=" book token" />
+    <img src="img/book-icon.png" alt=" book token"  id="token"/>
     <!--enlarged book token image tha will be to the left of icon-->
     <fieldset>
       <legend>Add a Book</legend>
