Add pic and bio, Update minor spelling errors

--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
         <img id="picOfJordan" src="img/jordan-pic.jpg" alt="picture of jordan" />
         <p  id="jordan">
           Jordan <br>
-          enter bio here
+          A Software Developer with experience working in a large development team. Encountering and overcoming new challenges make life interesting. Knowing when to celebrate small victories has helped Jordan through difficult tasks. Jordan has recently begun baking bread as a way to relax.
         </p>
       </section>
       <section>
