--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </section>
     </div>
     <h3 id="volunteer">Volunteer Opportunities</h3>
-    <p>Thank you for your interest in wanting to volunteer. Stop by any of our locations to recieve more information.</p>
+    <p>Thank you for your interest in wanting to volunteer. Stop by any of our locations to receive more information.</p>
   </main>
   <footer>
     <ul>
