added bio in about us

--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
         <img id="picOfMary" src="img/mary-pic.jpg" alt="picture of mary" />
         <p id="mary">
           Mary <br>
-          Mary graduated from Kirkwood in 2020 and has an associates in Allied Health Sciences(medical assisting). She had been working in the healthcare field for the last two years through the pandemic. She has decided to switch careers and is now a student at the Delta V Codeschool in the hopes of breaking in to tech field as a Software Developer.
+          Mary graduated from Kirkwood in 2020 and has an associates in Allied Health Sciences(medical assisting). She had been working in the healthcare field for the last two years through the pandemic. But has now decided to switch careers and is now a student at the Delta V Codeschool pursuing a career in Software Development.
         </p>
       </section>
       <section>
