Add about us content for Daniel

--- a/about-us.html
+++ b/about-us.html
@@ -27,6 +27,13 @@
     <main>
       <h2>About Us</h2>
       <section>
+        <img id="picOfDaniel" src="img/daniel-pic.jpg" alt="picture of daniel" />
+        <p  id="daniel">
+          Daniel <br>
+          Daniel graduated from Iowa State University in 2013 with a degree in materials engineering and a minor in music. He has worked a wide variety of jobs, from retail sales to warehouse work to church ministry. He is now pursuing a career in software development as a student at Delta V.
+        </p>
+      </section>
+      <section>
         <img id="picOfAllie" src="img/allie-pic.jpg" alt="picture of allie" />
         <p id="allie">
           Allie <br>
@@ -38,13 +45,6 @@
         <p id="mary">
           Mary <br>
           Mary graduated from Kirkwood in 2020 and has an associates in Allied Health Sciences(medical assisting). She had been working in the healthcare field for the last two years through the pandemic. But has now decided to switch careers and is now a student at the Delta V Codeschool pursuing a career in Software Development.
-        </p>
-      </section>
-      <section>
-        <img id="picOfDaniel" src="img/daniel-pic.jpg" alt="picture of daniel" />
-        <p  id="daniel">
-          Daniel <br>
-          enter bio here
         </p>
       </section>
       <section>
